--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -1,13 +1,17 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
+<!ENTITY Ctr_addonbar		"Addonleiste">
+<!ENTITY Ctr_extrabar		"Extraleiste">
+<!ENTITY Ctr_flexspace		"Flexibler Zwischenraum">
+<!ENTITY Ctr_space			"Zwischenraum">
+<!ENTITY Ctr_separator		"Trennlinie">
+
 <!ENTITY Ctr_main_t			"Grundeinstellungen">
 <!ENTITY Ctr_tabcolors_t	"Tabfarben">
 <!ENTITY Ctr_tabtext_t		"Tab Text">
 <!ENTITY Ctr_fixes_t		"Korrekturen">
 <!ENTITY Ctr_special_t		"Extra">
 <!ENTITY Ctr_experim_t		"Experimentell">
-
-<!ENTITY Ctr_ui				"Oberfläche">
 
 <!ENTITY Ctr_tabs			"Tabs">
 <!ENTITY Ctr_tabs0			"Gerundete Tabs (Australis)">
@@ -19,17 +23,6 @@
 <!ENTITY Ctr_tabwidth0		"Maximalbreite: 180px (standard)">
 <!ENTITY Ctr_tabwidth1		"Maximalbreite: 150px">
 <!ENTITY Ctr_tabwidth2		"Maximalbreite: 250px (klassisch)">
-<!ENTITY Ctr_smallnavbut	"Kleine Buttons">
-<!ENTITY Ctr_findbar_def	"Suchleiste (Standardposition)">
-<!ENTITY Ctr_findbar_bot	"Suchleiste unten">
-<!ENTITY Ctr_findbar_top	"Suchleiste oben">
-<!ENTITY Ctr_hidenavbar		"Navigationsleiste verstecken">
-<!ENTITY Ctr_addonbar		"Addonleiste">
-<!ENTITY Ctr_extrabar		"Extraleiste">
-
-<!ENTITY Ctr_nav_txt_ico0	"Zeige Symbole">
-<!ENTITY Ctr_nav_txt_ico1	"Zeige Symbole und Text">
-<!ENTITY Ctr_nav_txt_ico2	"Zeige nur Text">
 
 <!ENTITY Ctr_appbutton		"Anwendungsbutton">
 <!ENTITY Ctr_appbutton0		"Button deaktiviert">
@@ -47,12 +40,18 @@
 <!ENTITY Ctr_appbuttonI2	"Farbe nur auf der Titelleiste">
 <!ENTITY Ctr_appbuttonI3	"und der Tabsleiste sichtbar!">
 
+<!ENTITY Ctr_ui				"Oberfläche">
+<!ENTITY Ctr_smallnavbut	"Kleine Buttons (Navigationsleiste)">
+<!ENTITY Ctr_hidenavbar		"Navigationsleiste verstecken">
 <!ENTITY Ctr_buttons		"Buttons">
 <!ENTITY Ctr_backforward	"Vor-Zurück Button verschiebbar">
 <!ENTITY Ctr_wincontrols	"Vollbild-Min/Max/Schl. verschiebbar">
-<!ENTITY Ctr_flexspace		"Flexibler Zwischenraum">
-<!ENTITY Ctr_space			"Zwischenraum">
-<!ENTITY Ctr_separator		"Trennlinie">
+<!ENTITY Ctr_findbar_def	"Suchleiste (Standardposition)">
+<!ENTITY Ctr_findbar_top	"Suchleiste oben">
+<!ENTITY Ctr_findbar_bot	"Suchleiste unten">
+<!ENTITY Ctr_nav_txt_ico0	"Zeige Symbole">
+<!ENTITY Ctr_nav_txt_ico1	"Zeige Symbole und Text">
+<!ENTITY Ctr_nav_txt_ico2	"Zeige nur Text">
 
 <!ENTITY Ctr_customsqtab	"Eigene Farbeinstellungen für quadratische Tabs">
 <!ENTITY Ctr_tabnor			"Tab (standard)">
