--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -1,13 +1,17 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
+<!ENTITY Ctr_addonbar		"Barra de complementos">
+<!ENTITY Ctr_extrabar		"Barra de herramientas adicional">
+<!ENTITY Ctr_flexspace		"Espacio flexible">
+<!ENTITY Ctr_space			"Espacio">
+<!ENTITY Ctr_separator		"Separator">
+
 <!ENTITY Ctr_main_t			"Main">
 <!ENTITY Ctr_tabcolors_t	"Tab colors">
 <!ENTITY Ctr_tabtext_t		"Tab text">
 <!ENTITY Ctr_fixes_t		"Fixes">
 <!ENTITY Ctr_special_t		"Special">
 <!ENTITY Ctr_experim_t		"Experimental">
-
-<!ENTITY Ctr_ui				"Interfaz de usuario general">
 
 <!ENTITY Ctr_tabs			"Pestañas">
 <!ENTITY Ctr_tabs0			"Pestañas curvadas (Australis)">
@@ -19,17 +23,6 @@
 <!ENTITY Ctr_tabwidth0		"Ancho-máximo: 180px (por defecto)">
 <!ENTITY Ctr_tabwidth1		"Ancho-máximo: 150px">
 <!ENTITY Ctr_tabwidth2		"Ancho-máximo: 250px (clásico)">
-<!ENTITY Ctr_smallnavbut	"Botones pequeños">
-<!ENTITY Ctr_findbar_def	"Barra de búsqueda, (posición por defecto)">
-<!ENTITY Ctr_findbar_top	"Barra de búsqueda arriba">
-<!ENTITY Ctr_findbar_bot	"Barra de búsqueda abajo">
-<!ENTITY Ctr_hidenavbar		"Ocultar barra de navegación">
-<!ENTITY Ctr_addonbar		"Barra de complementos">
-<!ENTITY Ctr_extrabar		"Barra de herramientas adicional">
-
-<!ENTITY Ctr_nav_txt_ico0	"Mostrar sólo iconos">
-<!ENTITY Ctr_nav_txt_ico1	"Mostrar iconos y texto">
-<!ENTITY Ctr_nav_txt_ico2	"Mostrar sólo texto">
 
 <!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
@@ -47,12 +40,18 @@
 <!ENTITY Ctr_appbuttonI2	"sólo sobre barra de herramientas ">
 <!ENTITY Ctr_appbuttonI3	"de título-/pestañas!">
 
+<!ENTITY Ctr_ui				"Interfaz de usuario general">
+<!ENTITY Ctr_smallnavbut	"Botones pequeños (barra de navegación)">
+<!ENTITY Ctr_hidenavbar		"Ocultar barra de navegación">
 <!ENTITY Ctr_buttons		"Botones de barra de herramientas">
 <!ENTITY Ctr_backforward	"Botón atrás-adelante movible">
 <!ENTITY Ctr_wincontrols	"Movable fullscreen window controls">
-<!ENTITY Ctr_flexspace		"Espacio flexible">
-<!ENTITY Ctr_space			"Espacio">
-<!ENTITY Ctr_separator		"Separator">
+<!ENTITY Ctr_findbar_def	"Barra de búsqueda, (posición por defecto)">
+<!ENTITY Ctr_findbar_top	"Barra de búsqueda arriba">
+<!ENTITY Ctr_findbar_bot	"Barra de búsqueda abajo">
+<!ENTITY Ctr_nav_txt_ico0	"Mostrar sólo iconos">
+<!ENTITY Ctr_nav_txt_ico1	"Mostrar iconos y texto">
+<!ENTITY Ctr_nav_txt_ico2	"Mostrar sólo texto">
 
 <!ENTITY Ctr_customsqtab	"Custom colors for squared tabs">
 <!ENTITY Ctr_tabnor			"Tab (default)">
