--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -1,13 +1,17 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
+<!ENTITY Ctr_addonbar		"Barre des modules">
+<!ENTITY Ctr_extrabar		"Barre d'outils supplémentaire">
+<!ENTITY Ctr_flexspace		"Espace flexible">
+<!ENTITY Ctr_space			"Espace">
+<!ENTITY Ctr_separator		"Separator">
+
 <!ENTITY Ctr_main_t			"Principal">
 <!ENTITY Ctr_tabcolors_t	"Couleur des onglets">
 <!ENTITY Ctr_tabtext_t		"Texte des onglets">
 <!ENTITY Ctr_fixes_t		"Réglages">
 <!ENTITY Ctr_special_t		"Spéciaux">
 <!ENTITY Ctr_experim_t		"Expérimental">
-
-<!ENTITY Ctr_ui				"Interface générale">
 
 <!ENTITY Ctr_tabs			"Onglets">
 <!ENTITY Ctr_tabs0			"Onglets arrondis (Australis)">
@@ -19,17 +23,6 @@
 <!ENTITY Ctr_tabwidth0		"Largeur maximale: 180px (defaut)">
 <!ENTITY Ctr_tabwidth1		"Largeur maximale: 150px">
 <!ENTITY Ctr_tabwidth2		"Largeur maximale: 250px (classique)">
-<!ENTITY Ctr_smallnavbut	"Petit boutons">
-<!ENTITY Ctr_findbar_def	"Barre de recherche (position par défaut)">
-<!ENTITY Ctr_findbar_top	"Barre de recherche en haut">
-<!ENTITY Ctr_findbar_bot	"Barre de recherche en bas">
-<!ENTITY Ctr_hidenavbar		"Masquer la barre de navigation">
-<!ENTITY Ctr_addonbar		"Barre des modules">
-<!ENTITY Ctr_extrabar		"Barre d'outils supplémentaire">
-
-<!ENTITY Ctr_nav_txt_ico0	"Afficher seulement les icônes">
-<!ENTITY Ctr_nav_txt_ico1	"Afficher icônes et textes">
-<!ENTITY Ctr_nav_txt_ico2	"Afficher seulement les textes">
 
 <!ENTITY Ctr_appbutton		"Bouton d'application">
 <!ENTITY Ctr_appbutton0		"Bouton désactivé">
@@ -47,12 +40,18 @@
 <!ENTITY Ctr_appbuttonI2	"sur la barre de titre">
 <!ENTITY Ctr_appbuttonI3	"ou d'onglets seulement!">
 
+<!ENTITY Ctr_ui				"Interface générale">
+<!ENTITY Ctr_smallnavbut	"Petit boutons (barre de navigation)">
+<!ENTITY Ctr_hidenavbar		"Masquer la barre de navigation">
 <!ENTITY Ctr_buttons		"Boutons de la barre d'outils">
 <!ENTITY Ctr_backforward	"Bouton avancer/reculer déplaçable">
 <!ENTITY Ctr_wincontrols	"Movable fullscreen window controls">
-<!ENTITY Ctr_flexspace		"Espace flexible">
-<!ENTITY Ctr_space			"Espace">
-<!ENTITY Ctr_separator		"Separator">
+<!ENTITY Ctr_findbar_def	"Barre de recherche (position par défaut)">
+<!ENTITY Ctr_findbar_top	"Barre de recherche en haut">
+<!ENTITY Ctr_findbar_bot	"Barre de recherche en bas">
+<!ENTITY Ctr_nav_txt_ico0	"Afficher seulement les icônes">
+<!ENTITY Ctr_nav_txt_ico1	"Afficher icônes et textes">
+<!ENTITY Ctr_nav_txt_ico2	"Afficher seulement les textes">
 
 <!ENTITY Ctr_customsqtab	"Couleurs personnalisées pour les onglets à angles droits">
 <!ENTITY Ctr_tabnor			"Onglet (par défaut)">
