--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -1,13 +1,17 @@
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
+<!ENTITY Ctr_addonbar		"Add-on Bar">
+<!ENTITY Ctr_extrabar		"Additional Toolbar">
+<!ENTITY Ctr_flexspace		"Flexible space">
+<!ENTITY Ctr_space			"Space">
+<!ENTITY Ctr_separator		"Separator">
+
 <!ENTITY Ctr_main_t			"Main">
 <!ENTITY Ctr_tabcolors_t	"Tab colors">
 <!ENTITY Ctr_tabtext_t		"Tab text">
 <!ENTITY Ctr_fixes_t		"Fixes">
 <!ENTITY Ctr_special_t		"Special">
 <!ENTITY Ctr_experim_t		"Experimental">
-
-<!ENTITY Ctr_ui				"General UI">
 
 <!ENTITY Ctr_tabs			"Tabs">
 <!ENTITY Ctr_tabs0			"Curved tabs (Australis)">
@@ -19,17 +23,6 @@
 <!ENTITY Ctr_tabwidth0		"Max-width: 180px (default)">
 <!ENTITY Ctr_tabwidth1		"Max-width: 150px">
 <!ENTITY Ctr_tabwidth2		"Max-width: 250px (classic)">
-<!ENTITY Ctr_smallnavbut	"Small buttons">
-<!ENTITY Ctr_findbar_def	"Findbar (default position)">
-<!ENTITY Ctr_findbar_top	"Findbar on top">
-<!ENTITY Ctr_findbar_bot	"Findbar at the bottom">
-<!ENTITY Ctr_hidenavbar		"Hide Navigation Toolbar">
-<!ENTITY Ctr_addonbar		"Add-on Bar">
-<!ENTITY Ctr_extrabar		"Additional Toolbar">
-
-<!ENTITY Ctr_nav_txt_ico0	"Show icons only">
-<!ENTITY Ctr_nav_txt_ico1	"Show icons and text">
-<!ENTITY Ctr_nav_txt_ico2	"Show text only">
 
 <!ENTITY Ctr_appbutton		"Application button">
 <!ENTITY Ctr_appbutton0		"Button disabled">
@@ -47,12 +40,18 @@
 <!ENTITY Ctr_appbuttonI2	"Only colored on titlebar">
 <!ENTITY Ctr_appbuttonI3	"and tabs toolbar!">
 
+<!ENTITY Ctr_ui				"General UI">
+<!ENTITY Ctr_smallnavbut	"Small buttons on navigation toolbar">
+<!ENTITY Ctr_hidenavbar		"Hide navigation toolbar">
 <!ENTITY Ctr_buttons		"Toolbar buttons">
 <!ENTITY Ctr_backforward	"Movable back-forward button">
 <!ENTITY Ctr_wincontrols	"Movable fullscreen window controls">
-<!ENTITY Ctr_flexspace		"Flexible space">
-<!ENTITY Ctr_space			"Space">
-<!ENTITY Ctr_separator		"Separator">
+<!ENTITY Ctr_findbar_def	"Findbar (default position)">
+<!ENTITY Ctr_findbar_top	"Findbar on top">
+<!ENTITY Ctr_findbar_bot	"Findbar at the bottom">
+<!ENTITY Ctr_nav_txt_ico0	"Show icons only">
+<!ENTITY Ctr_nav_txt_ico1	"Show icons and text">
+<!ENTITY Ctr_nav_txt_ico2	"Show text only">
 
 <!ENTITY Ctr_customsqtab	"Custom colors for squared tabs">
 <!ENTITY Ctr_tabnor			"Tab (default)">
