--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -53,7 +53,8 @@
 <!ENTITY Ctr_nav_txt_ico1	"Zeige Symbole und Text">
 <!ENTITY Ctr_nav_txt_ico2	"Zeige nur Text">
 
-<!ENTITY Ctr_customsqtab	"Eigene Farbeinstellungen für quadratische Tabs">
+<!ENTITY Ctr_customsqtab0	"Quadratische Tabs">
+<!ENTITY Ctr_customsqtab1	"Eigene Farbeinstellungen für quadratische Tabs">
 <!ENTITY Ctr_tabnor			"Tab (standard)">
 <!ENTITY Ctr_tabhov			"Tab (hover)">
 <!ENTITY Ctr_tabact			"Tab (aktiv)">
