--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -53,7 +53,8 @@
 <!ENTITY Ctr_nav_txt_ico1	"Afficher icônes et textes">
 <!ENTITY Ctr_nav_txt_ico2	"Afficher seulement les textes">
 
-<!ENTITY Ctr_customsqtab	"Couleurs personnalisées pour les onglets à angles droits">
+<!ENTITY Ctr_customsqtab0	"nglets à angle droit">
+<!ENTITY Ctr_customsqtab1	"Couleurs personnalisées pour les onglets à angles droits">
 <!ENTITY Ctr_tabnor			"Onglet (par défaut)">
 <!ENTITY Ctr_tabhov			"Onglet (au survol)">
 <!ENTITY Ctr_tabact			"Onglet (actif)">
